# tank_rs

./: .gitignore  Cargo.toml  run.ps1  run.sh
assets/: game_config.json  map_01.json
res/: frag_shader.glsl  game_object_templates.json  mesh_templates.json  settings.json  vertex_shader.glsl
res/glsl/: simple_frag_shader.glsl  simple_vertex_shader.glsl
res/map/: 1.json
scripts/: gen_explosion.py  green_explosion.json
src/: ai.rs  game_lib.rs  game_map.rs  game_obj.rs  lib.rs  main.rs  my_error.rs  mycollide.rs  mygame.rs  myjsonutils.rs  myopengl.rs  myrender.rs  myrenderer.rs  mytemplates.rs  mytests.rs  mytypes.rs  systems.rs  utils.rs
