[package]
name = "tank_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.2", features = ["dynamic_linking"] }
bevy_common_assets = { version = "0.13.0", features = ["json"] }
clap = { version = "4.5.48", features = ["derive"] }
once_cell = "1.21.3"
rand = { version = "0.9.2", features = ["small_rng"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
